--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,8 @@ text {
 
 path.line {
     fill: none;
-    stroke: blue;
-    stroke-width: 3px;
+    /*stroke: purple;*/
+    stroke-width: 2px;
 }
  
 .axis path,
@@ -126,7 +126,7 @@ path.line {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    background-color: #82bef6;
+    background-color: white /*#82bef6*/;
     margin-bottom: 20px;
     -webkit-column-break-inside: avoid;
     padding: 24px;
