Changed line chart a bit
added filled area below lines, changed color scheme to be non-random, added hover for tooltip (displays topic); combined csv files into one, and changed sizing in css to fit the graph

--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,8 @@ path.line {
   /* Force varying heights to simulate dynamic content */
   /*Graph*/
   .card:first-child {
-    height: 400px;
+    height: 410px;
+    width: 750px;
   }
 
   /* Slider */
