--- a/src/styles.css
+++ b/src/styles.css
@@ -149,12 +149,6 @@ path.line {
   height: 100px;
 }
 
-/* Map */
-
-.card:nth-child(3) {
-  height: 500px;
-}
-
 .menu-icon {
   position: fixed;
   display: flex;
@@ -230,4 +224,19 @@ div.tooltip {
   padding: 4px;
   font: 12px sans-serif;
   pointer-events: none;
+}
+
+#nyt_articles {
+  flex-direction: unset;
+  position: relative;
+  overflow-y: auto;
+  width: 100%;
+  height: 500px;
+  padding: 0px;
+}
+
+#scroll-svg {
+  position: absolute;
+  top: 0px;
+  width: 100%;
 }
