--- a/src/styles.css
+++ b/src/styles.css
@@ -27,10 +27,8 @@ path.line {
 
 #googleLogo {
   border-radius: 50%;
-  width: 50%;
+  height: 80%;
   text-align: center;
-  margin-left: 40px;
-  margin-top: 10px;
 }
 
 /* Assign grid instructions to our parent grid container */
@@ -39,30 +37,15 @@ path.line {
   display: grid;
   grid-template-columns: 160px 1fr;
   grid-template-rows: 50px 1fr 50px;
-  grid-template-areas: "sidenav header" "sidenav main" "sidenav footer";
   height: 100vh;
 }
 
 /* Give every child element its grid name */
 
-.header {
-  grid-area: header;
-  background-color: #648ca6;
-}
-
-.sidenav {
-  grid-area: sidenav;
-  background-color: #394263;
-}
-
 .main {
-  grid-area: main;
   background-color: #8fd4d9;
-}
-
-.footer {
-  grid-area: footer;
-  background-color: #648ca6;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .header, .footer {
@@ -70,31 +53,10 @@ path.line {
   align-items: center;
   justify-content: space-between;
   padding: 0 16px;
-  background-color: #648ca6;
-}
-
-.sidenav {
-  display: flex;
-  /* Will be hidden on mobile */
-  flex-direction: column;
-  grid-area: sidenav;
   background-color: #394263;
-}
-
-.sidenav__list {
-  padding: 0;
-  margin-top: 10px;
-  list-style-type: none;
-}
-
-.sidenav__list-item {
-  padding: 20px 20px 20px 45px;
-  color: #ddd;
-}
-
-.sidenav__list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
+  color: white;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .card {
@@ -117,12 +79,16 @@ path.line {
 #graph {
   height: 540px;
   width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
   
 /* Slider */
 
 #slider {
   height: 100px;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 #article_pic {
