--- a/src/styles.css
+++ b/src/styles.css
@@ -84,12 +84,14 @@ div.tooltip {
   grid-template-columns: 160px 1fr;
   grid-template-rows: 50px 1fr 50px;
   height: 100vh;
+  width: 100%;
 }
 
 .main {
   background-color: #8fd4d9;
   grid-column-start: 1;
   grid-column-end: 3;
+  width: 100%;
 }
 
 .card {
@@ -115,6 +117,7 @@ div.tooltip {
 /* Slider */
 #slider {
   height: 100px;
+  width:100%;
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -126,6 +129,10 @@ div.tooltip {
   align-items: center;
   justify-content: space-between;
   padding: 5px;
+  width:100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+
 }
 
 #map1 {
