Articles and Map change based on selected (clicked) topic
clicking on the line graph is the way to select a topic; updates map with circles of the category's color instead of just yellow.
also attempted to make graph scalable based on screen size, but commented out atm

--- a/src/styles.css
+++ b/src/styles.css
@@ -146,3 +146,21 @@ div.tooltip {
   border: solid 2px black;
   width: 40%;
 }
+
+/* (currently not used) code to help resize the graph 
+courtesy of https://stackoverflow.com/questions/16265123/resize-svg-when-window-is-resized-in-d3-js */
+
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: top;
+  overflow: hidden;
+}
+.svg-content-responsive {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
