--- a/src/nyt_style.css
+++ b/src/nyt_style.css
@@ -2,9 +2,11 @@
     flex-direction: unset;
     position: relative;
     overflow-y: auto;
-    width: 100%;
-    height: 500px;
+    width: 49%;
+    height: 504px;
     padding: 0px;
+    border: solid 2px black;
+    margin-bottom: 0;
 }
 
 #scroll-svg {
