--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ html, body {
   width: 100%;
 }
 
+h1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 text {
   font-family: arial;
   font-size: 12px;
