graph area becomes darker when clicked (selected)
changed default opacities for line/area, and made it change to higher opacity when selected; also tried to fix map sizing and article scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -185,7 +185,7 @@ div.tooltip {
   background-color: white;
   border: solid 2px #34a853;
   border-radius: 1%;
-  width: 50%;
+  width: 1000px;
   height: 500px;
 }
 
